# altk

./: Makefile.am  README.md  altk.pc.in  configure.ac
altk/: Makefile.am  altk.h  altkbase.c  altkbase.h  altkbin.c  altkbin.h  altkbitmap.c  altkbitmap.h  altkbox.c  altkbox.h  altkbuilder.c  altkbuilder.h  altkbutton.c  altkbutton.h  altkcontainer.c  altkcontainer.h  altkdialog.c  altkdialog.h  altkdisplay.c  altkdisplay.h  altkdrawable.c  altkdrawable.h  altkevent.c  altkevent.h  altkfont.c  altkfont.h  altkframe.c  altkframe.h  altkgc.c  altkgc.h  altklabel.c  altklabel.h  altkmain.c  altkmain.h  altkregion-private.h  altkregion.c  altkregion.h  altkroot.c  altkroot.h  altkstyle.c  (+13 more)
docs/: draft.txt
examples/: Makefile.am  allegro.supp  ex-box.c  ex-builder-dialog.xml  ex-builder.c  ex-button.c  ex-frame.c  ex-label.c  ex-table.c  ex-test.c  memcheck.in
tools/: Makefile.am  altk-xml2c.c
